syntax = "proto3";

package WoodflowCi.furniture_factory;

import "tasklet/api/tasklet.proto";
import "tasklet/services/ci/proto/ci.proto";
import "ci/tasklet/registry/demov2/woodflow/furniture_factory/proto/furniture_factory.proto";

message FurnitureFactoryContext {
    option (tasklet.context) = true;

    ci.CiService ci = 1 [(tasklet.inject) = true];
}

message FurnitureFactory {
    option (tasklet.tasklet_interface) = true;

    FurnitureFactoryContext ctx = 1;
    Input input = 2 [(tasklet.input) = true];
    Output output = 3 [(tasklet.output) = true];

}
